src/validation/tests/snapshots/rusty__validation__tests__array_validation_test__array_initialization_validation.snap
---
source: src/validation/tests/array_validation_test.rs
expression: "&diagnostics"
---
error[E043]: Array assignments must be surrounded with `[]`
  ┌─ <internal>:5:50
  │
5 │             arr2        : ARRAY[1..2] OF DINT := 1, 2;                                              // Missing `[`
  │                                                  ^^^^ Array assignments must be surrounded with `[]`

error[E043]: Array assignments must be surrounded with `[]`
  ┌─ <internal>:6:55
  │
6 │             arr3        : ARRAY[1..2] OF myStruct := ((var1 := 1), (var1 := 2, var2 := (1, 2)));    // Missing `[`
  │                                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Array assignments must be surrounded with `[]`

error[E043]: Array assignments must be surrounded with `[]`
  ┌─ <internal>:6:89
  │
6 │             arr3        : ARRAY[1..2] OF myStruct := ((var1 := 1), (var1 := 2, var2 := (1, 2)));    // Missing `[`
  │                                                                                         ^^^^ Array assignments must be surrounded with `[]`

error[E043]: Array assignments must be surrounded with `[]`
  ┌─ <internal>:7:55
  │
7 │             arr4        : ARRAY[1..2] OF myStruct := ((var1 := 1), (var1 := 2, var2 := 1, 2));      // Missing `[`
  │                                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Array assignments must be surrounded with `[]`

error[E043]: Array assignments must be surrounded with `[]`
  ┌─ <internal>:7:88
  │
7 │             arr4        : ARRAY[1..2] OF myStruct := ((var1 := 1), (var1 := 2, var2 := 1, 2));      // Missing `[`
  │                                                                                        ^ Array assignments must be surrounded with `[]`

error[E043]: Array assignments must be surrounded with `[]`
  ┌─ <internal>:8:51
  │
8 │             arr_init    : ARRAY[1..2] OF DINT := (1, 2);                                            // Missing `[`
  │                                                   ^^^^ Array assignments must be surrounded with `[]`

error[E043]: Array assignments must be surrounded with `[]`
   ┌─ <internal>:10:59
   │
10 │             y           : myStruct := (var1 := 1, var2 := 3, 4);                                    // Missing `[`
   │                                                           ^ Array assignments must be surrounded with `[]`

error[E043]: Array assignments must be surrounded with `[]`
   ┌─ <internal>:12:20
   │
12 │             arr := 1, 2;                                                                            // Missing `[`
   │                    ^ Array assignments must be surrounded with `[]`

error[E043]: Array assignments must be surrounded with `[]`
   ┌─ <internal>:13:21
   │
13 │             arr := (1, 2);                                                                          // Missing `[`
   │                     ^^^^ Array assignments must be surrounded with `[]`

error[E043]: Array assignments must be surrounded with `[]`
   ┌─ <internal>:15:40
   │
15 │             x   := (var1 := 1, var2 := 3, 4);                                                       // Missing `[`
   │                                        ^ Array assignments must be surrounded with `[]`
